@@ -1,9 +1,10 @@
-# $NetBSD: Makefile,v 1.21 2010/02/04 04:31:15 obache Exp $
+# $NetBSD: Makefile,v 1.22 2011/02/18 23:56:48 shattered Exp $
 #
 
-DISTNAME=	abook-0.5.6
+DISTNAME=	abook-0.6.0pre2
+PKGNAME=	abook-0.6.0rc2
 CATEGORIES=	databases
-MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=abook/}
+MASTER_SITES=	http://abook.sourceforge.net/devel/
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://abook.sourceforge.net/
